--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "handlebars": "^4.1.2",
     "mongoose": "^5.3.15"
   }
 }
